<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/action_settings" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/account_info_tv"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/account_info_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/account_profile_picture_iv"
                        android:src="@drawable/ic_account_box" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:text="@string/register_hint2_til"
                            android:textAppearance="@style/TextAppearance.AppCompat"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginTop="3dp"
                            android:text="@string/register_hint1_til"
                            android:textAppearance="@style/TextAppearance.AppCompat"
                            android:textStyle="bold"
                            app:drawableEndCompat="@drawable/ic_arrow_forward" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginTop="3dp"
                            android:text="@string/bio_tv"
                            android:textAppearance="@style/TextAppearance.AppCompat"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:orientation="vertical">

              <!--  <Button
                    android:id="@+id/notifications_settings_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_arrow_forward"
                    android:gravity="start|center"
                    android:text="@string/action_notifications"
                    android:textAllCaps="false" /> -->

                <Button
                    android:id="@+id/appearance_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_arrow_forward"
                    android:gravity="start|center"
                    android:text="@string/appearance_btn"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/privacy_policy_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_subdirectory_arrow_right"
                    android:gravity="start|center"
                    android:text="@string/privacy_policy_btn"
                    android:textAllCaps="false" />


                <Button
                    android:id="@+id/contact_us_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_subdirectory_arrow_right"
                    android:gravity="start|center"
                    android:text="Contact Us (Feedback)"
                    android:textAllCaps="false" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="14dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/about_us_btn"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start|center"
                        android:text="@string/about_us_btn"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/what_new_btn"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start|center"
                        android:text="@string/what_new_btn"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/terms_of_service_btn"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start|center"
                        android:text="@string/terms_of_service_btn"
                        android:textAllCaps="false" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/in_association_with_tv"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/parent_company_name"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/logout_btn"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>