<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".FirstActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/image_logo_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/app_hint"
            android:src="@drawable/boxeld_logo_two" />

        <ImageView
            android:id="@+id/user_one_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/image_logo_iv"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="85dp"
            android:layout_marginTop="205dp"
            android:contentDescription="@string/app_hint"
            android:src="@drawable/user_two" />

        <ImageView
            android:id="@+id/user_two_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/user_one_iv"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="-97dp"
            android:layout_marginEnd="91dp"
            android:contentDescription="@string/app_hint"
            android:src="@drawable/user_one" />

        <TextView
            android:id="@+id/hint1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_one_iv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/tv_hint1" />

        <TextView
            android:id="@+id/hint2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hint1_tv"
            android:layout_centerHorizontal="true"
            android:text="@string/tv_hint2" />

        <TextView
            android:id="@+id/hint3_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hint2_tv"
            android:layout_centerHorizontal="true"
            android:text="@string/tv_hint3" />

        <Button
            android:id="@+id/email_register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hint3_tv"
            android:layout_marginTop="60dp"
            android:text="@string/sign_up_btn" />

        <!-- <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google_signIn_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_register_btn"
            android:layout_centerInParent="true"
            android:layout_marginTop="22dp"
            android:text="@string/google_btn" /> -->

        <Button
            android:id="@+id/login_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_register_btn"
            android:layout_marginTop="60dp"
            android:text="@string/login_btn"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/dat_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn"
            android:layout_marginTop="22dp"
            android:text="btn" />

    </RelativeLayout>

</ScrollView>